<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/order"
            android:title="@string/order"
            android:visible="true"
            app:showAsAction="never"/>
        <item
            android:id="@+id/pending"
            android:title="@string/pendiong"
            android:visible="true"
            app:showAsAction="never"/>
        <item
            android:id="@+id/customerinfo"
            android:title="@string/info"
            android:visible="true"
            app:showAsAction="never"/>

    </group>
</menu>
