<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.education.user.taj.Orders">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/table1_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/table" />

        <ImageButton
            android:id="@+id/table2_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/table" />

        <ImageButton
            android:id="@+id/table3_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/table" />

    </LinearLayout>

    <TextView
        android:id="@+id/table1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="170dp"
        android:text="@string/table1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="170dp"
        android:text="@string/table2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="170dp"
        android:text="@string/table3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>