<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.education.user.taj.Foodtype.Chinese">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/noodles_checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/noodles"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/noodles"
                app:layout_constraintStart_toEndOf="@+id/noodles_checkbox1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/Noodles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/item1"
                android:textColor="@color/orangedark"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/noodles"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sub_item_1"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="21dp"
                android:text="@string/Sub"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/Noodles"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/noodles_edittext1"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/add_item_1"
                app:layout_constraintStart_toEndOf="@+id/sub_item_1"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/add_item_1"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginTop="21dp"
                android:text="@string/Add"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <CheckBox
                android:id="@+id/noodles_checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/noodles1"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="92dp"
                android:src="@drawable/noodles"
                app:layout_constraintStart_toEndOf="@+id/noodles_checkbox2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/Noodles1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:text="@string/item1"
                android:textColor="@color/orangedark"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/noodles1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sub_item_2"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="105dp"
                android:text="@string/Sub"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/Noodles1"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/noodles_editext2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="115dp"
                android:gravity="center"
                android:inputType="number"
                android:labelFor="@+id/editText1"
                app:layout_constraintEnd_toStartOf="@+id/add_item_2"
                app:layout_constraintStart_toEndOf="@+id/sub_item_2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_item_2"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginTop="105dp"
                android:text="@string/Add"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/noodles_checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/noodles2"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="182dp"
                android:src="@drawable/noodles"
                app:layout_constraintStart_toEndOf="@+id/noodles_checkbox3"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/Noodles2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/item1"
                android:textColor="@color/orangedark"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/noodles2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sub_item_3"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="205dp"
                android:text="@string/Sub"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/Noodles2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/noodles_editext3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="215dp"
                android:gravity="center"
                android:inputType="number"
                android:labelFor="@+id/editText1"
                app:layout_constraintEnd_toStartOf="@+id/add_item_3"
                app:layout_constraintStart_toEndOf="@+id/sub_item_3"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_item_3"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginTop="205dp"
                android:text="@string/Add"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/noodles_checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="292dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/noodles_checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="392dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/noodles_checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="492dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/noodles_checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="592dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/confirm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="147dp"
                android:layout_marginStart="142dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>




    </ScrollView>

</FrameLayout>
