<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.education.user.taj.Foodtype.Indian">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/biryani_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/biryan_iitem"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/biryani"
                app:layout_constraintStart_toEndOf="@+id/biryani_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/Noodles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/biryani"
                android:textColor="@color/orangedark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/biryan_iitem"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noodlessub"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:text="@string/Sub"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/Noodles"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/noodlesquantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:inputType="textPersonName"
                android:labelFor="@+id/editText1"
                app:layout_constraintEnd_toStartOf="@+id/noodlesadd"
                app:layout_constraintStart_toEndOf="@+id/noodlessub"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noodlesadd"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:text="@string/Add"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <CheckBox
                android:id="@+id/biryani_checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/biryan_item1"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="92dp"
                android:src="@drawable/biryani"
                app:layout_constraintStart_toEndOf="@+id/biryani_checkbox1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/biryani"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:text="@string/biryani"
                android:textColor="@color/orangedark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/biryan_item1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/biryanisub"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="105dp"
                android:gravity="center"
                android:text="@string/Sub"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/biryani"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/biryani_quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="105dp"
                android:inputType="textPersonName"
                android:labelFor="@+id/editText1"
                app:layout_constraintEnd_toStartOf="@+id/noodlesadd1"
                app:layout_constraintStart_toEndOf="@+id/biryanisub"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noodlesadd1"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="105dp"
                android:gravity="center"
                android:text="@string/Add"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/biryani_checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/noodles2"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="188dp"
                android:src="@drawable/biryani"
                app:layout_constraintStart_toEndOf="@+id/biryani_checkbox3"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/Noodles2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/biryani"
                android:textColor="@color/orangedark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/noodles2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noodlessub2"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="205dp"
                android:gravity="center"
                android:text="@string/Sub"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/Noodles2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/noodlesquantity2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="205dp"
                android:inputType="textPersonName"
                android:labelFor="@+id/editText1"
                app:layout_constraintEnd_toStartOf="@+id/noodlesadd2"
                app:layout_constraintStart_toEndOf="@+id/noodlessub2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noodlesadd2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="205dp"
                android:gravity="center"
                android:text="@string/Add"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/biryani_checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="292dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/biryani_checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="392dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/biryani_checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="492dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/biryani_checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="592dp"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>




    </ScrollView>
</FrameLayout>
